manifests/deployment.yaml
apiVersion: apps/v2
kind: Deployment
metadata:
  name: iot-app
  labels:
    app: iot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app
  template:
    metadata:
      labels:
        app: iot-app
    spec:
      containers:
        - name: iot-app
          image: grinbel/iot-app:v2
          ports:
            - containerPort: 8888
