manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-app
spec:
  selector:
    app: iot-app
  ports:
    - port: 8888
      targetPort: 8888
