manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-app
spec:
  ingressClassName: traefik
  rules:
    - host: app.iot.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iot-app
                port:
                  number: 8888
